--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "coverage": "vitest run --coverage",
+    "test": "vitest",
+    "test:ui": "vitest --ui"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -14,8 +17,15 @@
   "devDependencies": {
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-test-renderer": "^17.0.1",
     "@vitejs/plugin-react": "^1.0.7",
+    "@vitest/ui": "latest",
+    "eslint": "^8.11.0",
     "typescript": "^4.5.4",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vitest": "^0.6.1",
+    "happy-dom": "^2.46.3",
+    "jsdom": "latest",
+    "react-test-renderer": "^17.0.2"
   }
 }
