--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
     "@types/react-test-renderer": "^17.0.1",
-    "@vitejs/plugin-react": "^1.0.7",
+    "@vitejs/plugin-react": "^1.2.0",
     "@vitest/ui": "latest",
     "eslint": "^8.11.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0",
-    "vitest": "^0.6.1",
     "happy-dom": "^2.46.3",
     "jsdom": "latest",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "typescript": "^4.6.2",
+    "vite": "^2.8.6",
+    "vitest": "^0.6.1"
   }
 }
